Table wrap fixes for mobile devices

--- a/the_platform/static/the_platform/css/style.css
+++ b/the_platform/static/the_platform/css/style.css
@@ -36,6 +36,14 @@
     #agreements {
         text-align: left;
     }
+
+    table {
+        table-layout: fixed;
+    }
+
+    td {
+        word-wrap: break-word;
+    }
 }
 
 body, html {
